--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -40,6 +40,7 @@ jobs:
       run: |
         ssh ${{ secrets.USER }}@${{ secrets.SERVER }} "
           cd ./subrake &&
-          ls -al &
+          ls -al &&
+          chmod u+x ./installer.sh &&
           ./installer.sh
         "
