--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.9'
         
@@ -40,6 +40,7 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     environment: demo
+    needs: build-and-test
 
     steps:
     - name: Checkout
