--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -27,8 +27,8 @@ jobs:
         slack-message: |
           Workflow Triggered for Subrake / SubTAP
           
-          Triggered By: ${{ github.actor_id }}
-          Commit.     : ${{ github.sha }}
+          Triggered By: ${{ github.actor }}
+          Commit: ${{ github.sha }}
       env:
         SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
@@ -76,3 +76,45 @@ jobs:
     - name: Push code to the Server
       run: |
         rsync -r --progress --delete ./ ${{ secrets.USER }}@${{ secrets.SERVER }}:/home/${{ secrets.USER }}/subrake
+    
+  final-notify:
+    name: Success Notification
+    runs-on: ubuntu-latest
+    needs: deploy
+    
+    steps:
+    - name: Sending the success notification
+      id: slack
+      uses: slackapi/slack-github-action@v1.24.0
+      with:
+        channel-id: 'C05CN71FX0F'
+        slack-message: |
+          Build Successful for Subrake / SubTAP
+          Run the following command on demo server to for final deploy:
+          
+          Command: ./installer.sh --deploy
+          Triggered By: ${{ github.actor }}
+          Commit: ${{ github.sha }}
+          Repository: ${{ github.repositoryUrl }}
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+
+  deploy-error:
+    name: Error while building and deploying
+    runs-on: ubuntu-latest
+    if: ${{ needs.build.result == 'failure' || needs.test.result == 'failure' }}
+    
+    steps:
+    - name: Push Error Notification to SLACK!
+      id: slack
+      uses: slackapi/slack-github-action@v1.24.0
+      with:
+        channel-id: 'C05CN71FX0F'
+        slack-message: |
+          Build Failed for Subrake / SubTAP
+          
+          Triggered By: ${{ github.actor }}
+          Commit: ${{ github.sha }}
+          Repository: ${{ github.repositoryUrl }}
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
