--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -55,33 +55,33 @@ jobs:
       run: |
         subrake --help
     
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-latest
-    environment: demo
-    needs: build-and-test
+#   deploy:
+#     name: Deploy
+#     runs-on: ubuntu-latest
+#     environment: demo
+#     needs: build-and-test
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+#     steps:
+#     - name: Checkout
+#       uses: actions/checkout@v3
 
-    - name: Setup SSH Keys
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+#     - name: Setup SSH Keys
+#       uses: webfactory/ssh-agent@v0.7.0
+#       with:
+#         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
         
-    - name: Add Public Keys to hosts files
-      run: |
-        ssh-keyscan -H ${{secrets.SERVER}} > ~/.ssh/known_hosts
+#     - name: Add Public Keys to hosts files
+#       run: |
+#         ssh-keyscan -H ${{secrets.SERVER}} > ~/.ssh/known_hosts
         
-    - name: Push code to the Server
-      run: |
-        rsync -r --progress --delete ./ ${{ secrets.USER }}@${{ secrets.SERVER }}:/home/${{ secrets.USER }}/subrake
+#     - name: Push code to the Server
+#       run: |
+#         rsync -r --progress --delete ./ ${{ secrets.USER }}@${{ secrets.SERVER }}:/home/${{ secrets.USER }}/subrake
     
   final-notify:
     name: Success Notification
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: build-and-test
     
     steps:
     - name: Sending the success notification
